logs/region_growing_rgb/build.make.070.log.stderr
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:29:17: error: ‘PointXYZRGB’ was not declared in this scope
 pcl::PointCloud<PointXYZRGB>::Ptr pclCloud;
                 ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:29:17: note: suggested alternative:
In file included from /usr/include/pcl-1.7/pcl/point_types.h:311:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:4:
/usr/include/pcl-1.7/pcl/impl/point_types.hpp:559:24: note:   ‘pcl::PointXYZRGB’
   struct EIGEN_ALIGN16 PointXYZRGB : public _PointXYZRGB
                        ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:29:28: error: template argument 1 is invalid
 pcl::PointCloud<PointXYZRGB>::Ptr pclCloud;
                            ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:29:35: error: expected initializer before ‘pclCloud’
 pcl::PointCloud<PointXYZRGB>::Ptr pclCloud;
                                   ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp: In function ‘void distanceFilter(pcl::PointCloud<pcl::PointXYZRGB>::ConstPtr&)’:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:33:73: error: ‘PointXYZRGB’ was not declared in this scope
     pcl::PointCloud<pcl::PointXYZRGB>::Ptr resCloud(new pcl::PointCloud<PointXYZRGB>);
                                                                         ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:33:73: note: suggested alternative:
In file included from /usr/include/pcl-1.7/pcl/point_types.h:311:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:4:
/usr/include/pcl-1.7/pcl/impl/point_types.hpp:559:24: note:   ‘pcl::PointXYZRGB’
   struct EIGEN_ALIGN16 PointXYZRGB : public _PointXYZRGB
                        ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:33:84: error: template argument 1 is invalid
     pcl::PointCloud<pcl::PointXYZRGB>::Ptr resCloud(new pcl::PointCloud<PointXYZRGB>);
                                                                                    ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:46:32: error: type/value mismatch at argument 1 in template parameter list for ‘template<class PointT> class pcl::PointCloud’
     pcl::PointCloud<PointXYZRGB>::ConstPtr tmp(resCloud);
                                ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:46:32: error:   expected a type, got ‘PointXYZRGB’
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:46:44: error: expected initializer before ‘tmp’
     pcl::PointCloud<PointXYZRGB>::ConstPtr tmp(resCloud);
                                            ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:47:5: error: ‘pclCloud’ was not declared in this scope
     pclCloud = tmp;
     ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:47:16: error: ‘tmp’ was not declared in this scope
     pclCloud = tmp;
                ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp: In function ‘void cloud_cb(pcl::PointCloud<pcl::PointXYZRGB>::Ptr)’:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:111:33: error: invalid initialization of reference of type ‘pcl::PointCloud<pcl::PointXYZRGB>::ConstPtr& {aka boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZRGB> >&}’ from expression of type ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’
     distanceFilter(colored_cloud);
                                 ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:31:6: error: in passing argument 1 of ‘void distanceFilter(pcl::PointCloud<pcl::PointXYZRGB>::ConstPtr&)’
 void distanceFilter(pcl::PointCloud<pcl::PointXYZRGB>::ConstPtr& cloud)
      ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:117:20: error: ‘pclCloud’ was not declared in this scope
     pcl::toROSMsg(*pclCloud, output);
                    ^
make[2]: *** [CMakeFiles/kinect_segmentation.dir/src/kinect_segmentation.cpp.o] Error 1
make[1]: *** [CMakeFiles/kinect_segmentation.dir/all] Error 2
make: *** [all] Error 2
